Added implementation of background colour.

--- a/client/css/home.css
+++ b/client/css/home.css
@@ -83,3 +83,104 @@
   right: 0;
   width: 15%;
 }
+
+.button{
+  position: relative;
+  display: inline-block;
+  background-color: #99ff99;  /*light green*/
+  background: #99ff99;
+  border: none;
+  padding: 15px 25px;
+  border-radius: 15px;  
+  cursor: pointer;
+  outline: none;
+  box-shadow: 0 5px #999;
+}
+
+.button:hover{
+  background-color: #4CAF50;
+}
+
+
+.button:active{
+  background-color: #4CAF50;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+/*-----------------------------------------*/
+.button2{
+  background-color: #ff99cc;  /*pink*/
+  border-radius: 15px;
+}
+
+.button2:hover{
+  background-color: #ff3399;
+}
+
+
+.button2:active{
+  background-color: #ff3399;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+/*-----------------------------------------*/
+.button3{
+  background-color: #66ccff;  /*light blue*/
+  border-radius: 15px;
+}
+
+.button3:hover{
+  background-color:#0088cc;
+}
+
+.button3:active{
+  background-color: #0088cc;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+/*-----------------------------------------*/
+.button4{
+  background-color: #ff3300;  /*red*/
+  border-radius: 15px;
+}
+
+.button4:hover{
+  background-color:#b32400;
+}
+
+.button4:active{
+  background-color: #b32400;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+/*-----------------------------------------*/
+.button5{
+  background-color: #555555;  /* Black */
+  border-radius: 15px;
+}
+
+.button5:hover{
+  background-color:#262626;
+}
+
+.button5:active{
+  background-color: #262626;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+/*-----------------------------------------*/
+.button6{
+  background-color: #FFFFFF;  /* Black */
+  border-radius: 15px;
+}
+
+.button6:hover{
+  background-color:#d9d9d9;
+}
+
+.button6:active{
+  background-color: #d9d9d9;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
