Add inplementation of changing board color with background color.

--- a/client/css/home.css
+++ b/client/css/home.css
@@ -108,7 +108,7 @@
 }
 /*-----------------------------------------*/
 .button2{
-  background-color: #cceeff;  /*blue*/
+  background-color: #cceeff;  /*light blue*/
   border-radius: 15px;
 }
 
