--- a/client/css/style.css
+++ b/client/css/style.css
@@ -34,7 +34,7 @@ a:hover, a:focus, a:active {
 }
 
 #fh5co-header {
-  background: #2e2e2e url(../images/hero_bg.jpg) no-repeat;
+  background: #2e2e2e url(../assets/hero_bg.jpg) no-repeat;
   background-size: cover;
   color: #ffffff;
   padding-top: 2em;
