--- a/client/css/home.css
+++ b/client/css/home.css
@@ -2,6 +2,11 @@
 	display: none;
 }
 
+.light-med-text {
+  font-size: 20px;
+  color: #7b7b7b;
+}
+
 #alert {
   width: 300px;
   position: fixed;
@@ -63,6 +68,10 @@
 .table > tbody > tr > td.center-cell-contents  {
   vertical-align: middle;
   text-align: center;
+}
+
+.center-on-page {
+  margin-top: 12%;
 }
 
 /* need this to make the gameboard dynamic */
@@ -183,6 +192,3 @@
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
-
-
->>>>>>> origin/finalInterface
