Colour code chat messages and show the username that will be used for chat above the chat text box

--- a/client/css/home.css
+++ b/client/css/home.css
@@ -103,6 +103,11 @@
 
 /**************** CHAT ****************/
 
+p.chat-text {
+  line-height: 1.4;
+  margin-bottom: 5px;
+}
+
 .unread-svg {
   height: 8px;
   width: 8px;
